mysite/cooklog/static/css/cooklog.css
h2 a {
    color: #874C62;
}

body {
    padding-left: 0px;
    background-color: #FFFFFF; /*FFFEEE;*/
    color: #874C62;
    font-family: 'Merriweather', serif;
    padding-bottom: 0px;
}

footer {
    background-color: #A7D2CB;
    padding-bottom: 0px;
    font-family: 'Merriweather', serif;
    padding: 10px 5px 10px 10px;
}

h5 {
    color: #874C62; /*#F2D388;*/
    font-size: 18px;
}

a:link {
    color: #C98474;
    font-family: 'Merriweather', serif;
}

a:visited {
    color: #C98474;
    font-family:  'Merriweather', serif;
}

.page-header {
    background-color: #A7D2CB;
    margin-top: 0;
    padding: 10px 10px 10px 10px;
    height: 60px;
}

.page-header-title a {
    font-size: 36px;
    color: #874C62;
    padding-left: 20px;
    font-family:  'Merriweather', serif;
    float: left;
    width: 230px;
}

.page-header-menu {
    font-size: 28px;
    color: #C98474;
    float: center;
    width: 360px;
}
.page-header-menu a {
    color: #874C62;
}

.page-footer {
    font-size: 14px;
    color: #C98474;
}

.page-menu {
    margin-left: 20px;
    padding-bottom: 10px;
    display: block;
    list-style: none;
}

/*
.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
    color: #C98474;
    font-size: 10pt;
    text-decoration: none;
    font-family:  'Merriweather', serif;
}
 */

.page-title {
    padding-left: 20px;
    padding-top: 10px;
    padding-bottom: 5px;
    font-family: 'Merriweather', serif;
    color: #874C62;
    font-size: 20px;
}

.page-subtitle {
    font-size: 16px;
    color: #008080;
    padding-top: 20px;
    padding-left: 30px;
    padding-bottom: 20px;
    font-family:  'Merriweather', serif;
}



.dish-mini {
    padding-left: 40px;
    min-height: 110px;
}

.dish-mini-date {
    float: left;
    font-size: 12px;
    color: #C98474;
    width: 80px;
}

.dish-mini-date-long {
    float: left;
    font-size: 12px;
    color: #C98474;
    width: 100px;
    padding-top: 5px;
}

.dish-mini-date-extra-long {
    float: left;
    font-size: 12px;
    color: #C98474;
    width: 130px;
    padding-top: 5px;
}

.dish-mini-days-until {
    float: left;
    font-size: 12px;
    color: #C98474;
    width: 80px;
}

.dish-mini-chef {
    float: left;
    padding: 0 30px;
    width: 140px;
}

.dish-mini-chef a {
    font-size: 16px;
    color: #874C62;
}

.dish-mini-inner {
    font-size: 13px;
    padding: 0 30px;
    width: 450px;
    margin: 0px 0;
    float: left;
}

.dish-mini-inner-name {
    float: top;
    padding-top: 0px;
    font-size: 16px;
}

.dish-mini-inner-name a {
    color: #874C62;
}

.dish-mini-inner-rating {
    float: top;
    padding-top: 5px;
}
.dish-mini-inner-recipe {
    float: top;
    padding-top: 5px;
    padding-bottom: 5px;
    font-size: 12px;
    color: #C98474
}
.dish-mini-inner-recipe a {
    color: #C98474;
}
.dish-mini-inner-method { /* used elsewhere than chef to-do??*/
    float: top;
    padding-top: 0px;
    font-size: 12px;
    color: #000000; /* or 008080? */
}

.dish-mini-image {
    font-size: 13px;
    padding: 0 0px;
    margin: 0px 0;
    float: left;
    width: 120px;
}
.dish-mini-edit {
    font-size: 12px;
}

.dish-brief {
    padding-left: 40px;
    min-height: 30px;
}

.dish-brief-inner {
    font-size: 13px;
    padding: 0 2px;
    width: 1200px;
    margin: 0px 0;
    float: left;
}

.dish-brief-inner-edit {
    font-size: 12px;
    float: left;
    padding-top: 5px;
    width: 30px;
}

.dish-brief-inner-name {
    float: left;
    padding-top: 0px;
    font-size: 16px;
    width: 450px;
    word-wrap: break-word;
}

.dish-brief-inner-name a {
    color: #874C62;
}

.dish-brief-inner-rating {
    float: left;
    padding-top: 5px;
    width: 100px;
}
.dish-brief-inner-recipe {
    float: left;
    padding-top: 5px;
    padding-bottom: 0px;
    font-size: 12px;
    width: 30px;
    color: #C98474
}
.dish-brief-inner-recipe a {
    color: #C98474;
}

.dish-album {
    width = 200px;
    margin-top: 10px;
    margin-left: 20px;
    margin-right: 30px;
    margin-bottom: 10px;
    display: inline-block
}


.album-photo img {
    height: 180px;
    width: 240px;
    object-fit: cover;
    border: 2px solid #F2D388;
}

.album-img-placeholder img {
    height: 180px;
    width: 240px;
    object-fit: cover;
    border: 2px solid #F2D388;
    filter: grayscale(100%);
}

.album-stars {
    padding-left: 0px;
    width: 100px;
    display: inline-block
}

.album-dish-name {
    display: inline-block;
    width: 240px;
    height: 60px;
    vertical-align: top;
}

.crop img {
    height: 90px;
    width: 120px;
    object-fit: cover;
    border: 4px solid #F2D388;
}

.crop-placeholder img {
    height: 90px;
    width: 120px;
    object-fit: cover;
    border: 4px solid #F2D388;
    filter: grayscale(100%);
}

.page-text {
    font-size: 14px;
    padding-left: 40px;
    padding-bottom: 0px;
    color: #000000;
    padding-top: 10px;
}

.dish-full {
    padding-left: 40px;
    padding-bottom: 40px;
}

.dish-full-stars {
    padding-top: 10px;
    padding-bottom: 10px;
}

.dish-full-method {
    width: 600px;
}

.dish-full-chef-comments {
    width: 600px;
    padding-bottom: 10px;
}

.dish-full-subtitle {
    font-size: 12px;
    color: #008080;
    padding-top: 12px;
    margin-left: -10px;
    padding-bottom: 5px;
    font-family:  'Merriweather', serif;
}

.dish-social-comments-and-likes {
    border: 4px solid #F2D388;
    margin-left: -20px;
    margin-top: 20px;
    margin-bottom: 20px;
    width: 400px;
    padding-bottom: 10px;
}

.dish-full-comments {
    font-size: 12px;
    padding-left: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.dish-full-no-comments {
    font-size: 12px;
    font-style: italic;
    margin-bottom: 5px;
    margin-top: 5px;
}

.dish-button-add-comment {
    margin-left: 20px;
    background: #F2D388;
    width: 80px;
}

.dish-button-add-like {
    margin-left: 20px;
    background: #F2D388;
    width: 80px;
}

.dish-full-likes {
    font-size: 12px;
}

.dish-full-no-likes {
    font-size: 12px;
    font-style: italic;
    
    margin-top: 5px;
    padding-left: 10px;
    padding-bottom: 10px;
}


.dish-full-days-until {
    padding-top: 20px;
    padding-bottom: 20px;
}
.dish-full-query-status {
    padding-bottom: 20px;
}

.dish-empty {
    padding-left: 40px;
    padding-bottom: 20px;
}

.dish-entry-form {
    padding-left: 40px;
    padding-bottom: 40px;
}


.content {
    margin-left: 40px;
}

h1, h2 {
    padding-left: 10px;
    font-family:  'Merriweather', serif;
    color: #874C62;
}

h3 {
    font-family: 'Merriweather', serif;
    color: #874C62;
}

h4 {
    font-family:  'Merriweather', serif;
    color: #008080;
}


.date {
    color: #A7D2CB;
}

.save {
    float: right;
}

.post-form textarea, .post-form input {
    width: 100%;
}

.top-menu, .top-menu:hover, .top-menu:visited {
    color: #1B1209;
    float: right;
    font-size: 10pt;
    margin-right: 15px;
}

.dish {
    margin-bottom: 4px;
    color: #874C62;
}

.dish h1 a, .dish h1 a:visited {
    color: #C98474;
}







/* Dropdown Button */
.dropbtn {
    background-color: #A7D2CB;
    color: white;
    padding: 2px;
    font-size: 28px;
    border: none;
    cursor: pointer;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    font-size: 14px;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #F2D388}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
    display: block;
}

/* Change the background color of the dropdown button when the dropdown content is shown */
.dropdown:hover .dropbtn {
    background-color: #F2D388 ;
}

